--- a/Testing/pytest.ini
+++ b/Testing/pytest.ini
@@ -1,3 +1,6 @@
 [pytest]
 markers =
 	yt_download: Downloads a song from Youtube
+	dbmanager_init: Initializing the database nanager
+	dbmanager_connectivity: All the tests regarding database connectivity
+	dbmanager_datamanipulation: Read/Write/Delete operations inside database
